# holomorph

./: .travis.yml  Cargo.toml  LICENSE  README.md  gen_protocol.pl
database/: Cargo.toml
login/: Cargo.toml
login/src/: config.rs  main.rs  server.rs
login/src/session/: mod.rs
login/src/session/handlers/: identification.rs  mod.rs  selection.rs
protocol/: Cargo.toml  README.md
protocol/benches/: int32.rs  var_int.rs
protocol/src/: constants.rs  enums.rs  frame.rs  io.rs  lib.rs  protocol.rs  test.rs  variants.rs
protocol/src/frame/: codec.rs  mod.rs
protocol/src/messages/: mod.rs
protocol/src/messages/authorized/: mod.rs
protocol/src/messages/common/basic/: mod.rs
protocol/src/messages/connection/: mod.rs
protocol/src/messages/connection/register/: mod.rs
protocol/src/messages/connection/search/: mod.rs
protocol/src/messages/debug/: mod.rs
protocol/src/messages/game/: mod.rs
protocol/src/messages/game/achievement/: mod.rs
protocol/src/messages/game/actions/: mod.rs
protocol/src/messages/game/alliance/: mod.rs
protocol/src/messages/game/almanach/: mod.rs
protocol/src/messages/game/approach/: mod.rs
protocol/src/messages/game/atlas/: mod.rs
protocol/src/messages/game/basic/: mod.rs
protocol/src/messages/game/character/: mod.rs
protocol/src/messages/game/chat/: mod.rs
protocol/src/messages/game/context/: mod.rs
protocol/src/messages/game/dare/: mod.rs
protocol/src/messages/game/dialog/: mod.rs
protocol/src/messages/game/entity/: mod.rs
protocol/src/messages/game/feed/: mod.rs
protocol/src/messages/game/finishmoves/: mod.rs
protocol/src/messages/game/friend/: mod.rs
protocol/src/messages/game/guest/: mod.rs
protocol/src/messages/game/guild/: mod.rs
protocol/src/messages/game/house/: mod.rs
protocol/src/messages/game/idol/: mod.rs
protocol/src/messages/game/initialization/: mod.rs
protocol/src/messages/game/interactive/: mod.rs
protocol/src/messages/game/inventory/: mod.rs
protocol/src/messages/game/look/: mod.rs
protocol/src/messages/game/moderation/: mod.rs
protocol/src/messages/game/modificator/: mod.rs
protocol/src/messages/game/presets/: mod.rs
protocol/src/messages/game/prism/: mod.rs
protocol/src/messages/game/pvp/: mod.rs
protocol/src/messages/game/report/: mod.rs
protocol/src/messages/game/script/: mod.rs
protocol/src/messages/game/shortcut/: mod.rs
protocol/src/messages/game/social/: mod.rs
protocol/src/messages/game/startup/: mod.rs
protocol/src/messages/game/subscriber/: mod.rs
protocol/src/messages/game/tinsel/: mod.rs
protocol/src/messages/game/ui/: mod.rs
protocol/src/messages/handshake/: mod.rs
protocol/src/messages/queues/: mod.rs
protocol/src/messages/secure/: mod.rs
protocol/src/messages/security/: mod.rs
protocol/src/messages/server/basic/: mod.rs
protocol/src/messages/subscription/: mod.rs
protocol/src/messages/web/: mod.rs
protocol/src/messages/web/ankabox/: mod.rs
protocol/src/messages/web/haapi/: mod.rs
protocol/src/messages/wtf/: mod.rs
protocol/src/types/: mod.rs
protocol/src/types/common/basic/: mod.rs
protocol/src/types/connection/: mod.rs
protocol/src/types/game/: mod.rs
protocol/src/types/game/achievement/: mod.rs
protocol/src/types/game/actions/: mod.rs
protocol/src/types/game/approach/: mod.rs
protocol/src/types/game/character/: mod.rs
protocol/src/types/game/context/: mod.rs
protocol/src/types/game/dare/: mod.rs
protocol/src/types/game/entity/: mod.rs
protocol/src/types/game/fight/: mod.rs
protocol/src/types/game/finishmoves/: mod.rs
protocol/src/types/game/friend/: mod.rs
protocol/src/types/game/guild/: mod.rs
protocol/src/types/game/house/: mod.rs
protocol/src/types/game/idol/: mod.rs
protocol/src/types/game/interactive/: mod.rs
protocol/src/types/game/look/: mod.rs
protocol/src/types/game/mount/: mod.rs
protocol/src/types/game/paddock/: mod.rs
protocol/src/types/game/presets/: mod.rs
protocol/src/types/game/prism/: mod.rs
protocol/src/types/secure/: mod.rs
protocol/src/types/version/: mod.rs
shared/: Cargo.toml
shared/src/: chunk.rs  config.rs  lib.rs
shared/src/database/: mod.rs  schema.rs
shared/src/net/: mod.rs
shared/src/session/: chunk.rs  mod.rs
src/shared/: Cargo.toml  chunk.rs  config.rs  crypt.rs  crypto.rs  database.rs  io.rs  lib.rs  server.rs  session.rs
src/shared/database/: mod.rs  schema.rs
src/shared/net/: connection.rs  handler.rs  mod.rs  server.rs
src/shared/pool/: chunk.rs  mod.rs  session.rs
src/shared/protocol/: connection.rs  debug.rs  enums.rs  handshake.rs  holomorph.rs  mod.rs  queues.rs  security.rs  variants.rs  version.rs
src/shared/protocol/authorized/: mod.rs
src/shared/protocol/common/: mod.rs
src/shared/protocol/connection/: mod.rs
src/shared/protocol/game/: mod.rs
src/shared/protocol/handshake/: mod.rs
src/shared/protocol/messages/: mod.rs
src/shared/protocol/secure/: mod.rs
src/shared/protocol/security/: mod.rs
src/shared/protocol/updater/: mod.rs
src/shared/session/: chunk.rs  mod.rs
(+482 files in other folders)
