[package]
name = "holomorph"
version = "0.1.0"
authors = ["scalexm <martin.alex32@hotmail.fr>"]

[dependencies]
rand = "*"
log = "*"
env_logger = "*"
time = "*"
rustc-serialize = "*"
postgres = "*"
lazy_static = "*"
shared = { path = "src/shared" }
protocol = { path = "src/protocol" }
diesel = "*"
quasi_macros = "*"
quasi = "*"

[dependencies.eventual]
git = "https://github.com/carllerche/eventual"

[profile.release]
debug = true

[[bin]]
name = "auth"
path = "src/auth/main.rs"

[[bin]]
name = "game"
path = "src/game/main.rs"

[lib]
name = "codegen"
path = "src/codegen.rs"
plugin = true

[[test]]
name = "test"
path = "test/test.rs"
