[package]
name = "protocol"
version = "0.1.0"
authors = ["scalexm <alexandre@scalexm.fr>"]
edition = "2018"

[dependencies]
bytes = "0.4"
tokio-codec = { version = "0.2.0", git = "https://github.com/scalexm/tokio" }
protocol_derive = { path = "../protocol_derive" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "int32"
harness = false

[[bench]]
name = "var_int"
harness = false
