[package]
name = "protocol"
version = "0.1.0"
authors = ["scalexm <alexandre@scalexm.fr>"]
edition = "2018"

[dependencies]
bytes = { git = "https://github.com/tokio-rs/bytes" }
protocol_derive = { path = "../protocol_derive" }
pin-utils = "0.1.0-alpha.4"
futures-preview = "0.3.0-alpha.16"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "int32"
harness = false

[[bench]]
name = "var_int"
harness = false
