[package]
name = "shared"
version = "0.1.0"
authors = ["scalexm <martin.alex32@hotmail.fr>"]

[dependencies]
time = "*"
rustc-serialize = "*"
mio = "^0.5.0"
rust-crypto = "*"
rand = "*"
log = "*"
diesel = { git = "https://github.com/sgrif/diesel" }
diesel_codegen = { git = "https://github.com/sgrif/diesel", default-features = false, features = ["nightly"] }
protocol = { path = "../protocol", features = ["diesel"] }

[dependencies.eventual]
git = "https://github.com/carllerche/eventual"

[profile.release]
debug = true

[lib]
name = "shared"
path = "src/lib.rs"
